[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.2"
anyhow = "1.0.68"
base64 = "0.21.0"
cbc = { version = "0.1.2", features = ["alloc"] }
clap = { version = "4.0.32", features = ["derive"] }
form_urlencoded = "1.1.0"
rand = "0.8.5"
reqwest = { version = "0.11.13", features = ["json", "native-tls-alpn"] }
rsa = "0.7.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sha1 = "0.10.5"
tokio = { version = "1.24.1", features = ["full"] }
