[package]
name = "api_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"]}
tokio = { version = "1", features = ["full"]}
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
rand = "0.8.5"
base64 = "0.13.0"
rsa = "0.6"
sha1 = "0.10.0"
aes = "0.8.1"
cbc = { version = "0.1.2", features = ["alloc"]}
