[package]
name = "security"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
base64 = "0.13.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
rsa = "0.6"
sha2 = "0.10.2"
aes = "0.8.1"
cbc = "0.1.2"
